--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-sass": "^4.0.2"
   },
   "dependencies": {
-    "browser-sync": "^2.26.7"
+    "browser-sync": "^2.26.7",
+    "node-sass": "^4.13.1"
   }
 }
